--- a/plugins/Actions/lang/en.json
+++ b/plugins/Actions/lang/en.json
@@ -44,6 +44,7 @@
         "PageUrls": "Page URLs",
         "PageViewsByVisitor": "Number of times this page was seen in all visits by this visitor",
         "PluginDescription": "Reports about the page views and page titles. Lets you measure your internal website's search engine. Automatically tracks clicks on external links and file downloads. ",
+        "RevisitedPages": "Pages viewed more than once",
         "SiteSearchCategories1": "This report lists the Categories that visitors selected when they made a Search on your website.",
         "SiteSearchCategories2": "For example, Ecommerce websites typically have a \"Category\" selector so that visitors can restrict their searches to all products in a specific Category.",
         "SiteSearchFollowingPagesDoc": "When visitors search on your website, they are looking for a particular page, content, product, or service. This report lists the pages that were clicked the most after an internal search. In other words, the list of pages the most searched for by visitors already on your website.",
